got stuck box fixes

--- a/src/landing/landing.css
+++ b/src/landing/landing.css
@@ -20,7 +20,7 @@
 
 
 /* FOR DESKTOP */
-@media only screen and (min-width: 767px) {
+@media only screen and (min-width: 768px) {
     .landing .title {
 	font-size: 36px;
     }
@@ -29,6 +29,11 @@
 	font-size: 24px;
     }
 
+    .landing .got-stuck-box .text {
+	font-size: 20px;
+    }
+
+    
     .github-button .github-btn-container img {
 	width: 30px;
 	height: 30px;
